# rustedscreencapture

./: .gitignore  ASYNC_ONLY_SOLUTION.md  CURRENT_IMPLEMENTATION_STATUS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATED_RECORDING_GUIDE.md  INTEGRATION_GUIDE.md  LICENSE  PACKAGE_SUMMARY.md  README.md  REAL_IMPLEMENTATION_SUMMARY.md  build.rs  index.d.ts  index.js  package.json
src/: lib.rs
src/screencapturekit/: audio.rs  bindings.rs  content.rs  delegate.rs  encoder.rs  filters.rs  foundation.rs  mod.rs  objc_bridge.h  objc_bridge.m  objc_bridge_rust.rs  permission_manager.rs  permissions.rs  recording.rs  recording_manager.rs  stream.rs  stream_output.rs  transcription.rs  types.rs
test/: test-async-only.js  test-basic.js  test-complete-implementation.js  test-content-filter-fix.js  test-delegate-debug.js  test-integrated-recording.js  test-objc-bridge.js  test-production-blazing-speed.js  test-production-final.js  test-real-scdisplay-fix.js  test-real-screencapturekit.js  test-recording-functionality.js  test-recording-quality.js  test-recording.js  test-segfault-fix.js
