[package]
name = "screencapturekit-rust"
version = "1.0.0"
edition = "2021"
description = "Rust-based ScreenCaptureKit implementation with bypass approach for safe screen capture on macOS"
license = "MIT"
repository = "https://github.com/firstform/rustedscreencapture"
homepage = "https://github.com/firstform/rustedscreencapture"
documentation = "https://docs.rs/screencapturekit-rust"
keywords = ["screencapturekit", "macos", "screen-capture", "rust", "napi"]
categories = ["multimedia", "os::macos-apis", "api-bindings"]
readme = "README.md"

[lib]
name = "screencapturekit_rust"
crate-type = ["cdylib"]

[dependencies]
# Node.js native module support
napi = { version = "2.0", features = ["napi8"] }
napi-derive = "2.0"

# Error handling and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# objc2 ScreenCaptureKit bindings
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-av-foundation = "0.3"
block2 = "0.6"

# Foundation implementation dependencies
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"

# HTTP client for transcription APIs
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = "0.4"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true

[package.metadata.napi]
name = "screencapturekit-rust"
triples = ["aarch64-apple-darwin", "x86_64-apple-darwin"] 